feat: implement encryption for sensitive fields using EncryptedStringConverter and update related models